src/objects/Violation_Code__c.object
<CustomObject>
    <fields>
        <fullName>Chapter__c</fullName>
        <label>Chapter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deprecated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsection__c</fullName>
        <label>Subsection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Violation Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part__c</columns>
        <columns>Chapter__c</columns>
        <columns>Section__c</columns>
        <columns>Subsection__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Violation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Violation Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>